# WindowsCleaner

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Checkbox/: index.tsx
